Testeo de endpoints y agregado de nullable a hora_fin of rondas
