# back-laravel/storage/api-docs/api-docs.json
@@ -35,7 +35,8 @@
                             "schema": {
                                 "required": [
                                     "descrip",
-                                    "monto"
+                                    "monto",
+                                    "user_id"
                                 ],
                                 "properties": {
                                     "descrip": {
@@ -50,6 +51,12 @@
                                         "format": "float",
                                         "minimum": 0,
                                         "example": 50
+                                    },
+                                    "user_id": {
+                                        "description": "Id del jugador que crea",
+                                        "type": "number",
+                                        "minimum": 1,
+                                        "example": 1
                                     }
                                 },
                                 "type": "object"
